--- a/CSE330/Assignment/Assignment01Lab/Floating_Point_Representation.ipynb
+++ b/CSE330/Assignment/Assignment01Lab/Floating_Point_Representation.ipynb
@@ -1,30 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "name": "Copy of Floating_Point_Representation.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -37,16 +11,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "5xN2aMZ0rAJN"
       },
+      "outputs": [],
       "source": [
         "NAME = \"Tanjim Reza\"\n",
         "ID = \"20101065\"\n",
         "SECTION = \"10\""
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -62,6 +36,7 @@
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "Io3ii0VArAJO",
         "nbgrader": {
           "cell_type": "markdown",
           "checksum": "7c4e9d0fccc2e8dd26580075f9ceb52d",
@@ -71,8 +46,7 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "Io3ii0VArAJO"
+        }
       },
       "source": [
         "# Floating Point Representation\n",
@@ -126,9 +100,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "qIGtiRs-rAJP",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "ac5f73bdfe958d67ad35fcd7def0142b",
@@ -138,21 +114,21 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "qIGtiRs-rAJP"
+        }
       },
+      "outputs": [],
       "source": [
         "import math\n",
         "import itertools\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "deletable": false,
+        "id": "ubVFqV6mrAJP",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "98f9407d030b5a7e7abf8599b885afad",
@@ -162,9 +138,9 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        },
-        "id": "ubVFqV6mrAJP"
+        }
       },
+      "outputs": [],
       "source": [
         "class Float8():\n",
         "    \n",
@@ -262,15 +238,18 @@
         "        # print(f\"{self.sign}:{self.exponent}:{self.mantissa}\")\n",
         "        \n",
         "        return val\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "editable": false,
+        "id": "dnTMKYNKrAJQ",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "6ca28ff8f98269b69d905fdcd45d338c",
@@ -282,12 +261,18 @@
           "solution": false,
           "task": false
         },
-        "id": "dnTMKYNKrAJQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "38971803-0fc9-4c8c-fcaa-192deea90baf"
+        "outputId": "35c87ebd-2912-4139-c5eb-adc505a53f52"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0.0, 0.015625, 0.140625, 0.25, 0.265625, 0.375, 0.421875, 0.5, 0.90625, 1.0, 1.3125, 2.375, 2.0, 4.0, 7.0, 8.0, nan, inf, -0.0, -0.015625, nan, -inf, -1.0625, -1.8125, -8.0, -13.5, -4.0, -2.0]\n",
+            "28 out of 28 outputs matched for 8-bit floating points\n"
+          ]
+        }
+      ],
       "source": [
         "'''28 test cases for 8-bit floating points'''\n",
         "import numpy as np\n",
@@ -304,7 +289,7 @@
         "          '(-17, 16)', '(-29, 16)', '(-8, 1)', '(-27, 2)', '(-4, 1)', '(-2, 1)']\n",
         "          \n",
         "test = [Float8(x).val for x in data]\n",
-        "\n",
+        "print(test)\n",
         "for index in range(len(test)):\n",
         "    d = test[index]\n",
         "    try:\n",
@@ -313,16 +298,6 @@
         "        test[index] = str(d)\n",
         "np.testing.assert_equal(np.array(test), np.array(results))\n",
         "print('28 out of 28 outputs matched for 8-bit floating points')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "28 out of 28 outputs matched for 8-bit floating points\n"
-          ]
-        }
       ]
     },
     {
@@ -330,6 +305,7 @@
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "D2V7P4eyrAJR",
         "nbgrader": {
           "cell_type": "markdown",
           "checksum": "56c84b861684b011679fc374962c97d8",
@@ -339,8 +315,7 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "D2V7P4eyrAJR"
+        }
       },
       "source": [
         "## 16 Bit Floating Point Representation\n",
@@ -392,8 +367,10 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "deletable": false,
+        "id": "FEARBhuYrAJS",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "9176054a6507a9547cb18a21136d733e",
@@ -403,13 +380,11 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        },
-        "id": "FEARBhuYrAJS"
+        }
       },
+      "outputs": [],
       "source": [
         "class Float16():\n",
-        "    \n",
-        "\n",
         "    def __init__(self, bitstring):\n",
         "        '''Constructor\n",
         "        takes a 16-bit string of 0's and 1's as input and stores the sub-strings\n",
@@ -417,23 +392,25 @@
         "        Usage: Float16('0001111000011110')\n",
         "        '''\n",
         "\n",
+        "        \n",
+        "\n",
         "        # Make sure the input consists of exactly 16-bits.\n",
         "        assert(len(bitstring)==16)\n",
         "\n",
         "        # Assign the sign bit\n",
-        "        # self.sign = bitstring[?]\n",
+        "        self.sign = bitstring[0]\n",
         "        \n",
         "\n",
         "        # Assign the exponent part\n",
-        "        # self.exponent = bitstring[?]\n",
+        "        self.exponent = bitstring[1:5]\n",
         "        \n",
         "\n",
         "        # Assign the mantissa\n",
-        "        # self.mantissa = bitstring[?]\n",
+        "        self.mantissa = bitstring[5:]\n",
         "        \n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
-        "\n",
+        "        # raise NotImplementedError()\n",
+        "        # print(f\"Check:{self.sign}:{self.exponent}:{self.mantissa}\")\n",
         "        self.val = self.calculate_value()\n",
         "        \n",
         "    def __str__(self):\n",
@@ -453,21 +430,72 @@
         "\n",
         "        # Initialize with zero\n",
         "        val = 0.0\n",
+        "        #Checking nan/inf\n",
+        "        if self.exponent == \"1111\":\n",
+        "          # print(\"Inside naninf\")\n",
+        "          if self.mantissa == \"00000000000\":\n",
+        "            # print(\"inf\")\n",
+        "            # val = -math.inf\n",
+        "            if self.sign == \"1\":\n",
+        "              val = -math.inf\n",
+        "            else:\n",
+        "              val = math.inf\n",
+        "          else: \n",
+        "            # print(\"nan\")\n",
+        "            val = math.nan\n",
+        "        #SubNormals\n",
+        "        elif self.exponent == \"0000\": #0\n",
+        "          # print(\"Subnormal\")\n",
+        "          val = 0.0 \n",
+        "          for exp,bit in enumerate(self.mantissa):\n",
+        "            # print(f\"{exp}:::{bit}\")\n",
+        "            # print(exp+1, bit)\n",
+        "            x = int(bit)*(2**-int(exp+1))\n",
+        "            # print(x)\n",
+        "            val += x\n",
+        "          \n",
+        "          r = ((-1)**int(self.sign))*(2**(1-7))*val\n",
+        "          val = r\n",
         "        \n",
+        "        else: #Normal \n",
+        "          # print(\"Normal\")\n",
+        "          frac = 0 \n",
+        "          for exp, bit in enumerate(self.mantissa):\n",
+        "            x = int(bit)*(2**-int(exp+1))\n",
+        "            # print(f\"x:{x}::{frac}\")\n",
+        "            frac += x\n",
+        "          # print(\"F1:\",frac)\n",
+        "          if frac == \"0.0\":\n",
+        "            z = 1.0 \n",
+        "          else:\n",
+        "            z = 1+frac\n",
+        "          # print(\"Z:\",z)\n",
+        "          e = 0 \n",
+        "          for exp, bit in enumerate(self.exponent):\n",
+        "            # print(2-exp, bit)\n",
+        "            x = int(bit)*(2**int(3-exp))\n",
+        "            # print(\"x:\",x)\n",
+        "            e += x\n",
+        "          # print(\"E:\",e)\n",
+        "          r = ((-1)**int(self.sign))*(2**(e-7))*z\n",
+        "          val = r\n",
         "        # YOUR CODE HERE\n",
         "        # raise NotImplementedError()\n",
         "        \n",
-        "\n",
+        "        # print(f\"{self.b}:{val}\")\n",
         "        return val"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "editable": false,
+        "id": "SpIZzEIyrAJT",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "0c6dcd10e961fa37e25e8cba3164cea1",
@@ -479,8 +507,17 @@
           "solution": false,
           "task": false
         },
-        "id": "SpIZzEIyrAJT"
+        "outputId": "bf00ca2c-7470-4b6a-bc38-d4d4d3ef4f34"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "28 out of 28 outputs matched for 16-bit floating points\n"
+          ]
+        }
+      ],
       "source": [
         "'''28 test cases for 16-bit floating points'''\n",
         "data = [ '0011100000000010', '0100000000000000', '1100000000000000', '0100010000000000',\n",
@@ -496,7 +533,6 @@
         "           'nan', 'nan', 'nan', '(2731, 8192)', '(3217, 1024)', '(1, 1)', '(2049, 2048)']\n",
         "\n",
         "test = [Float16(x).val for x in data]\n",
-        "\n",
         "for index in range(len(test)):\n",
         "    d = test[index]\n",
         "    try:\n",
@@ -506,9 +542,35 @@
         "\n",
         "np.testing.assert_equal(np.array(test), np.array(results))\n",
         "print('28 out of 28 outputs matched for 16-bit floating points')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Copy of Floating_Point_Representation.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "f6e3f61be7202584264d94dbc81778413b48b252dd95a129bd59d025c059d69b"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.6 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
